# P4-DSL

./: .gitignore  README.md  dune-project  my_project.code-workspace  test.txt
examples/: duplicate_declarations.ha  simple.ha  test.ha  test_simple.ha  type_error.ha  unknown_device.ha
lib/: ast.ml  dune  interpreter.ml  lexer.mll  parser.mly  semantic.ml
test/: dune  test_functional.ml  test_interpreter.ml  test_parser_semantic.ml
